@@ -97,6 +97,7 @@
 	  - shambling horrors (from Sporkhack)
 	  - dungeon ferns
 	  - dungeon fern spores
+	  - dungeon fern sprouts
 
 	* new levels:
 	  - Black market version with One-eyed Sam promoted to management
